--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="section__pic-container">
-            <img src="/assets/profile.jpg" alt="ciseron jefrry's Profile picture" />
+            <img src="assets/profile.jpg" alt="ciseron jefrry's Profile picture" />
         </div>
     </section>
 
